--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "unisharp/laravel-filemanager": "1.9.2"
+        "unisharp/laravel-filemanager": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
