--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,16 @@ variables:
 before_script:
   - apt-get update
   - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev libzip-dev
+  
   - docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
   - docker-php-ext-install xml soap zip gd exif
   - docker-php-ext-install mysql && docker-php-ext-enable mysql
+  
+  - echo "Installing Node v${NODE_VERSION}..."
+  - curl -fsSL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash -
+  
   - apt-get clean
+  
   - php -v
   - php -i
 
