Пагинация, форма отправки на почту, и фронт

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/black-dashboard.min.css": "/css/black-dashboard.min.css",
+    "/css/nucleo-icons.css": "/css/nucleo-icons.css"
 }
