--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/js/perfect-scrollbar.jquery.min.js": "/js/perfect-scrollbar.jquery.min.js",
     "/js/bootstrap-notify.js": "/js/bootstrap-notify.js",
     "/js/black-dashboard.min.js": "/js/black-dashboard.min.js",
+    "/js/jquery.min.js": "/js/jquery.min.js",
     "/css/app.css": "/css/app.css",
     "/css/black-dashboard.min.css": "/css/black-dashboard.min.css",
     "/css/nucleo-icons.css": "/css/nucleo-icons.css"
