--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "haruncpi/laravel-simple-filemanager": "^1.0",
         "huddledigital/zendesk-laravel": "^3.5",
+        "intervention/image": "^2.5",
         "laravel/framework": "^8.12",
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
