--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,7 @@ build:
     - ckl
   script:
     # Sync to FTP
+    - echo "" >> /etc/lftp.conf
+    - echo "set ssl:verify-certificate off" >> /etc/lftp.conf
     - cat /etc/lftp.conf
     - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose --delete ./ www/test.ckl.kz/; bye"
