--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,3 +19,4 @@ vendor:
   script:
     - php -v
     - php composer.phar install
+    - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose --delete ./vendor www/test.ckl.kz/vendor --exclude public; bye"
