--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-  - vendor
+  # - vendor
   - upload
 
 image: registry-backend.cic.kz/centras/ckl:latest
@@ -19,4 +19,4 @@ vendor:
   script:
     - php -v
     - php composer.phar install
-    - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose --delete ./vendor www/test.ckl.kz/vendor --exclude public; bye"
+    - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose ./vendor www/test.ckl.kz/vendor --exclude public; bye"
