--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,3 +20,7 @@ vendor:
     - php -v
     - php composer.phar install
     - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose ./vendor www/test.ckl.kz/vendor --exclude public; bye"
+  artifacts:
+    paths:
+    - vendor
+    expire_in: 1 week
