--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ vendor:
   script:
     - php -v
     - php composer.phar install
-    - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose ./vendor www/test.ckl.kz/vendor --exclude public; bye"
+    # - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose ./vendor www/test.ckl.kz/vendor --exclude public; bye"
   artifacts:
     paths:
-    - vendor
+      - vendor
     expire_in: 1 week
