--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,24 @@ image: registry-backend.cic.kz/centras/ckl:latest
   tags:
     - ckl
   script:
-    - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose --delete ./ www/$FTP_DIRECTORY/ --exclude public --exclude vendor --exclude node_modules --exclude storage; bye"
+    - lftp -e \
+        \" \
+        open $FTP_HOST; \
+          \
+        user $FTP_USERNAME $FTP_PASSWORD; \
+          \
+        mirror -X .* -X .*/ \
+            --reverse \
+            --verbose \
+            --delete ./ www/$FTP_DIRECTORY/ \
+              \ 
+            --exclude public \
+            --exclude vendor \
+            --exclude node_modules \
+            --exclude storage \
+        ; \
+          \
+        bye"
   artifacts:
     paths:
       - vendor
