--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ image: registry-backend.cic.kz/centras/ckl:latest
             --exclude storage \
         ; \
           \
-        bye"
+        bye \"
   artifacts:
     paths:
       - vendor
