--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,13 @@ image: registry-backend.cic.kz/centras/ckl:latest
     - npm i
     - npm run dev
     - lftp -e "open $FTP_HOST; user $FTP_USERNAME $FTP_PASSWORD; mirror -X .* -X .*/ --reverse --verbose --delete ./public www/$FTP_DIRECTORY/public bye"
+  cache:
+    key: $CI_COMMIT_REF_SLUG
+    paths:
+      - .npm
+      - node_modules
+  variables:
+    npm_config_cache: ${CI_PROJECT_DIR}/.npm
 
 .vendor:
   when: manual
