covid controller initial added

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,11 @@
 {
-    "/js/app.js": "/js/app.js?id=85925b72fcc39ca72038",
+    "/js/app.js": "/js/app.js?id=e269edad362b49ce8255",
     "/js/perfect-scrollbar.jquery.min.js": "/js/perfect-scrollbar.jquery.min.js?id=5b861af403ed7ebefd2a",
     "/js/bootstrap-notify.js": "/js/bootstrap-notify.js?id=f3d45a0fa3643c5bcafd",
     "/js/black-dashboard.min.js": "/js/black-dashboard.min.js?id=3f5708c32bfb2cdf18d4",
     "/js/jquery.min.js": "/js/jquery.min.js?id=d2912f53d0623a5ce8ef",
-    "/css/app.css": "/css/app.css?id=7dec8f39ff2f79330bb4",
-    "/css/black-dashboard.min.css": "/css/blacks-dashboard.min.css?id=1ab8cd7b3322d35076b0",
+    "/js/jquery.maskedinput.min.js": "/js/jquery.maskedinput.min.js?id=2c7bbd6ec29c7432ddd0",
+    "/css/app.css": "/css/app.css?id=94ee4be231a7da1b5f93",
+    "/css/black-dashboard.min.css": "/css/black-dashboard.min.css?id=1ab8cd7b3322d35076b0",
     "/css/nucleo-icons.css": "/css/nucleo-icons.css?id=394dc8c2af0a0ee7d717"
 }
