--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^4.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-loader": "^15.9.5",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "black-dashboard": "^1.0.0",
         "bootstrap": "^4.6.0",
+        "imask": "^6.2.2",
         "popper.js": "^1.16.1"
     }
 }
