--- a/composer.json
+++ b/composer.json
@@ -53,10 +53,12 @@
             "@php artisan storage:link"
         ],
         "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "@php artisan optimize",
             "@php artisan storage:link"
         ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "@php artisan optimize",
             "@php artisan storage:link"
         ]
