--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-
+composer.lock
+composer.json
+package-lock.json
 /public/css
 /public/js
